--- a/gifts.toml
+++ b/gifts.toml
@@ -4,7 +4,7 @@ giftType = "Pokemon"
 beginningDate = "2024-07-11 11:02:35.882827"
 endDate = "2024-07-12 11:04:58.331731"
 
-[[mysterygift.pokemongift]]
+[mysterygift.pokemongift]
 originalTrainer = "test"
 id = 251
 species = "celebi"
