--- a/gifts.toml
+++ b/gifts.toml
@@ -1,5 +1,5 @@
 [[mysterygift]]
-name = "celebi-event"
+name = "celebi"
 giftType = "Pokemon"
 beginningDate = "2024-07-11 11:02:35.882827"
 endDate = "2024-07-12 11:04:58.331731"
@@ -14,3 +14,4 @@ locationOfOrigin = "Johto"
 types = ["Grass"]
 abilites = ["Overgrowth"]
 stats = [10, 10, 10, 10, 10, 10, 10]
+moves = ["", "", "", ""]
