--- a/gifts.toml
+++ b/gifts.toml
@@ -1,17 +1,17 @@
 [[mysterygift]]
 name = "celebi"
 giftType = "Pokemon"
-beginningDate = "2024-07-11 11:02:35.882827"
-endDate = "2024-07-12 11:04:58.331731"
+beginningDate = "2025-02-23T08:08:11.252578"
+endDate = "2025-03-25T08:08:11.252578"
 
 [mysterygift.pokemongift]
 originalTrainer = "test"
 id = 251
-species = "celebi"
-nickname = "celebi"
+species = "Celebi"
+nickname = "Celebi"
 shiny = false
 locationOfOrigin = "Johto"
-types = ["Grass"]
-abilites = ["Overgrowth"]
-stats = [10, 10, 10, 10, 10, 10, 10]
-moves = ["", "", "", ""]
+types = [ "Grass",]
+abilites = [ "Overgrowth",]
+stats = [ 10, 10, 10, 10, 10, 10, 10,]
+moves = [ "Tackle", "Leaf Storm", "Life Leech", "Pound",]
